Added gen_power_curve function that makes sample size calculations for series of desored powers.
Updated documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Authors@R: c(
 Description: Gives the number of participants necessary for the RDT
     performance evaluation studies.
 License: MIT + file LICENSE
+Imports: 
+    magrittr
 Suggests: 
     knitr,
     rmarkdown,
