added a non-inferiorit sample size calculation formula

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(n_pop_prop)
 export(n_tot_calculation)
 export(power_calc)
 export(sample_size_calculation)
+export(sample_size_non_inferiority)
 importFrom(magrittr,"%>%")
