--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,6 @@ export(n_tot_calculation)
 export(power_calc)
 export(sample_size_calculation)
 export(sample_size_non_inferiority)
+export(ss_non_inf_2)
 importFrom(magrittr,"%>%")
+importFrom(stats,qnorm)
