--- a/dev/config_fusen.yaml
+++ b/dev/config_fusen.yaml
@@ -6,11 +6,12 @@ flat_minimal.Rmd:
   - R/compare_proportions_cross.R
   - R/sample_size_calculation.R
   - R/sample_size_non_inferiority.R
+  - R/ss_non_inf_2.R
   tests:
   - tests/testthat/test-sample_size_calculation.R
   - tests/testthat/test-gen_pow_curve.R
   - tests/testthat/test-compare_proportions_cross.R
-  - tests/testthat/test-sample_size_non_inferiority.R
+  - tests/testthat/test-ss_non_inf_2.R
   vignettes: vignettes/sample-size-calculations.Rmd
   inflate:
     flat_file: dev/flat_minimal.Rmd
