--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,6 @@ export(n_tot_calculation)
 export(power_calc)
 export(sample_size_calculation)
 export(sample_size_non_inferiority)
-export(ss_non_inf_2)
+export(ss_compare_sen_spe)
 importFrom(magrittr,"%>%")
 importFrom(stats,qnorm)
